# src/routes/orderRoutes.ts
@@ -1,12 +1,14 @@
 import { Router } from 'express';
-import { createOrder, getOrder } from '../controllers/orderController';
+import { createOrder, getOrder,getAdminOrders,updateOrderStatus } from '../controllers/orderController';
 import { authenticateJWT } from '../middleware/authMiddleware';
-import { customerOnly } from '../middleware/roleMiddleware';
+import { adminOnly, customerOnly } from '../middleware/authMiddleware';
 
 const router = Router();
 
-router.post('/', authenticateJWT, customerOnly, createOrder);
-
+router.post('/', customerOnly, createOrder);
 router.get('/:orderNumber', authenticateJWT, getOrder);
+router.get('/', getAdminOrders);
+router.put('/:orderNumber/status', adminOnly, updateOrderStatus);
+
 
 export default router;
